--- a/ConnectFour/ConnectFour/ConnectFour.vcxproj
+++ b/ConnectFour/ConnectFour/ConnectFour.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="code\control\PlaceTarget.h" />
     <ClInclude Include="code\data\DataManager.h" />
     <ClInclude Include="code\data\define\MeshLoadDesc.h" />
+    <ClInclude Include="code\data\define\ShaderLoadDesc.h" />
     <ClInclude Include="code\data\define\TextureLoadDesc.h" />
     <ClInclude Include="code\gamethread\GameThread.h" />
     <ClInclude Include="code\gamethread\MyGameThread.h" />
@@ -47,6 +48,7 @@
     <ClInclude Include="code\device\Input.h" />
     <ClInclude Include="code\id\COLOR_ID.h" />
     <ClInclude Include="code\id\MESH_ID.h" />
+    <ClInclude Include="code\id\SHADER_ID.h" />
     <ClInclude Include="code\id\TEXTURE_ID.h" />
     <ClInclude Include="code\play\desk\Desk.h" />
     <ClInclude Include="code\play\desk\DeskDefine.h" />
@@ -65,10 +67,13 @@
     <ClInclude Include="code\renderer\command\IRenderCommand.h" />
     <ClInclude Include="code\renderer\command\LookAtCommand.h" />
     <ClInclude Include="code\renderer\command\MeshRenderCommand.h" />
+    <ClInclude Include="code\renderer\command\SphereShaderCommand.h" />
     <ClInclude Include="code\renderer\command\SpriteRenderCommand.h" />
     <ClInclude Include="code\renderer\command\StringRenderCommand.h" />
+    <ClInclude Include="code\renderer\desc\LightDesc.h" />
     <ClInclude Include="code\renderer\desc\LookAtDesc.h" />
     <ClInclude Include="code\renderer\desc\MeshRenderDesc.h" />
+    <ClInclude Include="code\renderer\desc\SphereShaderDesc.h" />
     <ClInclude Include="code\renderer\desc\SpriteRenderDesc.h" />
     <ClInclude Include="code\renderer\desc\StringRenderDesc.h" />
     <ClInclude Include="code\renderer\DisplayList.h" />
@@ -131,6 +136,7 @@
     <ClCompile Include="code\renderer\command\ClearCommand.cpp" />
     <ClCompile Include="code\renderer\command\LookAtCommand.cpp" />
     <ClCompile Include="code\renderer\command\MeshRenderCommand.cpp" />
+    <ClCompile Include="code\renderer\command\SphereShaderCommand.cpp" />
     <ClCompile Include="code\renderer\command\SpriteRenderCommand.cpp" />
     <ClCompile Include="code\renderer\command\StringRenderCommand.cpp" />
     <ClCompile Include="code\renderer\DisplayList.cpp" />
