--- a/ConnectFour/ConnectFour/ConnectFour.vcxproj.filters
+++ b/ConnectFour/ConnectFour/ConnectFour.vcxproj.filters
@@ -273,6 +273,12 @@
     <ClInclude Include="code\id\RENDER_TARGET_ID.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="code\renderer\desc\SkyBoxRenderDesc.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="code\renderer\command\SkyBoxRenderCommand.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="code\scene\GamePlay.cpp">
@@ -429,6 +435,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="code\renderer\command\SphereShaderCommand.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="code\renderer\command\SkyBoxRenderCommand.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
