--- a/ConnectFour/ConnectFour/ConnectFour.vcxproj.filters
+++ b/ConnectFour/ConnectFour/ConnectFour.vcxproj.filters
@@ -279,6 +279,9 @@
     <ClInclude Include="code\renderer\command\SkyBoxRenderCommand.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="code\play\PlayRecord.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="code\scene\GamePlay.cpp">
@@ -438,6 +441,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="code\renderer\command\SkyBoxRenderCommand.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="code\play\PlayRecord.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
