--- a/PostEffect/PostEffect/PostEffect.vcxproj.filters
+++ b/PostEffect/PostEffect/PostEffect.vcxproj.filters
@@ -23,5 +23,14 @@
     <ClInclude Include="code\ID.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="code\LightDesc.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="code\RenderDesc.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="code\DepthRenderDesc.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
