コンパイルをマルチスレッドか

--- a/ConnectFour/ConnectFour/ConnectFour.vcxproj
+++ b/ConnectFour/ConnectFour/ConnectFour.vcxproj
@@ -278,6 +278,7 @@
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalOptions>/MP %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
